test fix overflow mobile

--- a/css/main.css
+++ b/css/main.css
@@ -392,6 +392,7 @@ body {
   overflow: hidden; }
   @media (max-width: 1200px) {
     body {
+      position: fixed;
       overflow-x: hidden;
       overflow-y: visible; } }
 
