--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -1,6 +1,7 @@
 body {
   overflow: hidden;
   @media (max-width: 1200px) {
+    position: fixed;
     overflow-x: hidden;
     overflow-y: visible;
   }
